# cartracker

./: .gitignore  README.md
cartracker-server/: .env.example  package.json  pnpm-lock.yaml
cartracker-server/prisma/: schema.prisma
cartracker-server/prisma/migrations/20250705232056_add_models/: migration.sql
cartracker-server/prisma/migrations/20250705232554_make_user_agent_optional/: migration.sql
cartracker-server/prisma/migrations/20250705232658_change_frequency_type_to_int/: migration.sql
cartracker-server/prisma/migrations/20250705232855_add_lat_long_accuracy_columns/: migration.sql
cartracker-server/src/: db.ts  geo.ts  index.ts
cartracker-server/src/db/: db.ts  schema.ts
cartracker-server/src/env/: env.schema.ts  env.ts
cartracker-server/src/middleware/: auth.middleware.ts  ratelimit.middleware.ts  validation.middleware.ts
cartracker-server/src/routes/: api-router.ts
cartracker-server/src/routes/api/: auth.route.ts  index.route.ts  location.route.ts
cartracker-server/src/schemas/: api-schema.ts  auth.schema.ts  geo.schema.ts
cartracker-server/web/: index.html  login.html  logout.html  settings.html
cartracker-server/web/css/: default.css  index.css  login.css  navbar.css  settings.css
cartracker-server/web/js/: api.js  check-login.js  login.js  map.js  settings.js
cartrackerd/: CMakeLists.txt  config.json.example  main.cpp
cartrackerd/src/: api.cpp  api.h  config.cpp  config.h  dhclient.cpp  dhclient.h  main.cpp  request_queue.cpp  request_queue.h  wifi_blocker.cpp  wifi_blocker.h  wifi_helper.cpp  wifi_helper.h  wifi_network.h  wpaservice.cpp  wpaservice.h
